--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "movie-db",
   "version": "0.1.0",
+  "homepage": "https://zciwolvo.github.io/React-movie-db/",
   "private": true,
   "dependencies": {
     "mobx": "^5.13.0",
@@ -17,7 +18,9 @@
     "styled": "^1.0.0",
     "styled-components": "^5.3.3"
   },
-  "scripts": {
+  "scripts": {	  
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -37,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
