--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "movie-db",
+  "name": "React-movie-db",
   "version": "0.1.0",
   "homepage": "https://zciwolvo.github.io/React-movie-db/",
   "private": true,
