--- a/package.json
+++ b/package.json
@@ -4,21 +4,29 @@
   "homepage": "https://zciwolvo.github.io/React-movie-db/",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mdx-js/react": "^2.0.0",
+    "@progress/kendo-react-dropdowns": "^5.0.1",
     "mobx": "^5.13.0",
     "mobx-react": "^6.1.3",
     "node-sass": "4.14.1",
     "rc-pagination": "^1.20.9",
     "react": "^16.9.0",
+    "react-css-dropdown": "^1.1.2",
     "react-dom": "^16.9.0",
+    "react-dropdown-now": "^6.0.1",
     "react-moment": "^1.1.1",
     "react-router-dom": "^5.1.0",
     "react-scripts": "3.1.2",
     "react-spring": "^9.4.2",
     "recoil": "^0.6.1",
     "styled": "^1.0.0",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "theme-ui": "^0.13.1",
+    "typescript": "^4.5.5"
   },
-  "scripts": {	  
+  "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
